All functionality (like menu controller and item controller) are working.